fixed localStorage problem/dark mode problems

--- a/final-crud-app/src/App.css
+++ b/final-crud-app/src/App.css
@@ -1,6 +1,6 @@
 .dark-mode {
-    background-color: #121212;
-    color: #f1f1f1;
+    background-color: #212529;
+    color: #f8f9fa;
   }
   
   .dark-mode .card {
@@ -13,14 +13,11 @@
     background-color: #1e1e1e;
   }
   
-  .dark-mode .dropdown-menu {
-    background-color: #2c2c2c;
+
+  body, .dark-mode, .card, .navbar, .footer{
+    transition: background-color 0.5s ease, color 0.5s ease;
   }
-  
-  .dark-mode .form-control,
-  .dark-mode .form-select {
-    background-color: #2c2c2c;
-    color: #f1f1f1;
-    border: 1px solid #444;
-  }
-  
+
+  .dark-mode label {
+    color: #f8f9fa;
+  }  
