--- a/final-crud-app/src/components/AddAlbum.css
+++ b/final-crud-app/src/components/AddAlbum.css
@@ -2,5 +2,5 @@
     box-shadow: 5px 5px 5px 5px black;
     border: thin solid black;
     padding: 5em;
-    color: green;
+    color: rgb(0, 0, 0);
 }
